#thl-3 - wip: Support keyboard input event